# vcv-rack-plugin-mcp-server

./: CMakeLists.txt  DEVELOPMENT.md  Makefile  README.md  audio_config.py  build_dxt.ps1  plugin.json.in
.github/workflows/: build-plugin.yml
plugin/: Makefile
plugin/src/: plugin.hpp
src/: MCPBridge.cpp  RackMcpServer.cpp  RackMcpServer.hpp
